@@ -1,3 +1,9 @@
+2007-02-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-get-ls-command, tramp-get-file-exists-command)
+	(tramp-get-remote-ln): Handle error case.  Reported by Chris Moore
+	<dooglus@gmail.com>.
+
 2007-01-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
